<resources>
    <string name="app_name">MyAlarmManager</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_mesaage">Alarm Mesaage</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
</resources>