<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_time_alarm"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnOnceDate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_date_range_24" />

        <TextView
            android:id="@+id/tvOnceDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnOnceTime"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_access_time_24" />

        <TextView
            android:id="@+id/tvOnceTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_time" />

    </LinearLayout>

    <EditText
        android:id="@+id/edtOnceMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/alarm_mesaage"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnSetOnceAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/set_one_time_alarm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:text="@string/repeating_alarm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnRepeatingTime"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_access_time_24" />

        <TextView
            android:id="@+id/tvRepeatingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time" />

    </LinearLayout>

    <EditText
        android:id="@+id/edtRepeatingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/alarm_mesaage"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRepeatingAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/set_repeating_alarm"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelRepeatingAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel_alarm" />
    </LinearLayout>

</LinearLayout>